--- a/logging.ini
+++ b/logging.ini
@@ -27,14 +27,15 @@ args = (sys.stdout,)
 class = logging.handlers.RotatingFileHandler
 level = DEBUG
 formatter = jsonFormatter
-kwargs = {"filename": "debug.log", "maxBytes": 1048576, "backupCount": 10, "encoding": "utf8", "delay": True}
+args = ("main.log",)
+kwargs = {"maxBytes": 1048576, "backupCount": 10, "encoding": "utf8", "delay": True}
 
 [formatter_standardFormatter]
 format = %(asctime)s - %(levelname)s - %(name)s - %(processName)s - %(threadName)s - %(filename)s - %(module)s - %(lineno)d - %(funcName)s - %(message)s
-datefmt = %Y-%m-%dT%H:%M:%S
+;datefmt = %Y-%m-%dT%H:%M:%S
 
 [formatter_jsonFormatter]
 class = pythonjsonlogger.jsonlogger.JsonFormatter
 format = %(asctime)s - %(levelname)s - %(name)s - %(processName)s - %(threadName)s - %(filename)s - %(module)s - %(lineno)d - %(funcName)s - %(message)s
-datefmt = %Y-%m-%dT%H:%M:%S
+;datefmt = %Y-%m-%dT%H:%M:%S
 kwargs = {"timestamp": True}
