--- a/logging.ini
+++ b/logging.ini
@@ -2,18 +2,18 @@
 keys = root,src
 
 [handlers]
-keys = consoleHandler,debugFileHandler
+keys = consoleHandler,fileHandler
 
 [formatters]
 keys = standardFormatter,jsonFormatter
 
 [logger_root]
 level = DEBUG
-handlers = consoleHandler,debugFileHandler
+handlers = consoleHandler,fileHandler
 
 [logger_src]
 level = DEBUG
-handlers = consoleHandler,debugFileHandler
+handlers = consoleHandler,fileHandler
 qualname = src
 propagate = 0
 
@@ -23,7 +23,7 @@ level = INFO
 formatter = jsonFormatter
 args = (sys.stdout,)
 
-[handler_debugFileHandler]
+[handler_fileHandler]
 class = logging.handlers.RotatingFileHandler
 level = DEBUG
 formatter = jsonFormatter
