--- a/logging.yml
+++ b/logging.yml
@@ -25,7 +25,7 @@ handlers:
   null_handler:
     class: logging.NullHandler
 
-  console:
+  console_handler:
     class: logging.StreamHandler
     level: INFO
     formatter: json_formatter
@@ -63,10 +63,10 @@ handlers:
 
 root:
   level: DEBUG
-  handlers: [console, debug_file_handler]
+  handlers: [console_handler, debug_file_handler]
 
 loggers:
   src:
     level: DEBUG
-    handlers: [console, debug_file_handler]
+    handlers: [console_handler, debug_file_handler]
     propagate: false
